Edited wiki page ArkhamCalc through web user interface.

--- a/wiki/ArkhamCalc.wiki
+++ b/wiki/ArkhamCalc.wiki
@@ -4,7 +4,7 @@
 
 ArkhamCalc is a small utility that is designed to be used in conjunction with Arkham Horror, a 2005 board game published by Fantasy Flight Games. Many of the encounters in Arkham Horror involve rolling a number of dice and counting each success, which in most cases require rolling a five or six. Given the number of dice that you are allowed to roll and the number of "successes" required to pass the encounter, ArkhamCalc calculates the probability of succeeding in the encounter. ArkhamCalc can also take game conditions into account, such as being "blessed" or "cursed", which affect the probabilities of success beyond the standard calculation.
 
-ArkhamCalc is written in Java and uses the Android SDK.  It is distributed for free in the Android Market.
+ArkhamCalc is written in Java and uses the Android SDK.  It is distributed for free in the [https://market.android.com/details?id=com.kolita.arkhamcalc Android Market].
 
 Project logo adapted from [http://www.fantasyflightgames.com/edge_news.asp?eidn=964 Arkahm Horror Dice Set].
 
