--- a/wiki/ArkhamCalc.wiki
+++ b/wiki/ArkhamCalc.wiki
@@ -8,6 +8,8 @@ ArkhamCalc is written in Java and uses the Android SDK.  It is distributed for f
 
 Project logo adapted from [http://www.fantasyflightgames.com/edge_news.asp?eidn=964 Arkahm Horror Dice Set].
 
+*Feedback?* arkhamcalc at gmail dot com
+
 = Details =
   * [VersionHistory Version History]
   * [Faqs FAQs]
