--- a/ArkhamCalc/res/values/strings.xml
+++ b/ArkhamCalc/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">ArkhamCalc</string>
+    <string name="arkhamcalchelp_label">ArkhamCalc Help</string>
     <string name="mandy_chances_toast">Mandy\'s ability can only be used once per turn. Additional chances do not take her ability into account.</string>
     <string name="reroll_ones_chances_toast">The reroll ones ability can only be used once per turn. Additional chances do not take this ability into account.</string>
     <string name="menu_item_string_feedback">Send Feedback</string>
