Edited wiki page Faqs through web user interface.

--- a/wiki/Faqs.wiki
+++ b/wiki/Faqs.wiki
@@ -7,3 +7,4 @@
 *A:* Yes. Consider the following scenario. When you have one die to do two damage, the only way you can win the fight is if you roll a six (because you have a shotgun). If you are playing with Mandy's ability and you are neither cursed nor blessed, and you roll a five, you cannot reroll, because you got a success...although that success was worthless, because it only did one damage. So you lose the fight. Now, imagine the exact scenario above, except you are cursed. If you roll a five, it doesn't count as a success, so you are able to roll again, using Mandy's ability. So, when you are cursed, you actually have two chances to roll a six, instead of one chance when not cursed. Similar logic can be applied to the scenario above when you are blessed.
 
 ----
+Return to [ArkhamCalc Wiki Home]
