--- a/branches/dev-1_5/ArkhamCalc/res/values/strings.xml
+++ b/branches/dev-1_5/ArkhamCalc/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_name">ArkhamCalc</string>
     <string name="arkhamcalchelp_label">ArkhamCalc Help</string>
     <string name="mandy_chances_toast">Mandy\'s ability can only be used once per turn. Additional chances do not take her ability into account.</string>
+    <string name="skids_chances_toast">Skids\' ability can only be used once per turn. Additional chances do not take his ability into account.</string>
     <string name="reroll_ones_chances_toast">The reroll ones ability can only be used once per turn. Additional chances do not take this ability into account.</string>
     <string name="menu_item_string_feedback">Send Feedback</string>
     <string name="menu_item_string_help">Help</string>
