--- a/branches/dev-1_6/ArkhamCalc/res/values/strings.xml
+++ b/branches/dev-1_6/ArkhamCalc/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="reroll_ones_chances_toast">The reroll ones ability can only be used once per turn. Additional chances do not take this ability into account.</string>
     <string name="menu_item_string_feedback">Send Feedback</string>
     <string name="menu_item_string_help">Help</string>
+    <string name="menu_item_string_wiki">Visit Wiki</string>    
 	<string name="email_to">arkhamcalc@gmail.com</string>
 	<string name="email_subject">ArkhamCalc Feedback</string>
 	<string name="toast_exception_email">Unable to find an e-mail client.</string>
